update npm on container build

--- a/.docker/development/builds/node/Dockerfile
+++ b/.docker/development/builds/node/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12-stretch
+FROM node:12
 
 USER node
 
@@ -6,5 +6,7 @@ ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH="/home/node/.npm-global/bin:$PATH"
 
 WORKDIR /home/node/app
+
+RUN npm i -g npm
 
 RUN npm i -g @nestjs/cli
