--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   application:
-    build: ./builds/node
+    build: builds/node
     volumes:
       - ../../:/home/node/app
     depends_on:
